--- a/src/components/UserInfo.css
+++ b/src/components/UserInfo.css
@@ -1,35 +1,35 @@
-body{
-    color: #8e9194;
-    background-color: #f4f6f9;
+.form-container {
+    display: flex;
+    justify-content: center;
+    background-color: whitesmoke;
+    /* margin: 2rem 0; */
+    padding: 2rem;
 }
-.avatar-xl img {
-    width: 110px;
+
+/* .body{
+    color: #1b334b;
+    background-color: grey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 8px;
+    margin: 2rem 0;
+    width: 35rem;
+    padding: 2rem;
+} */
+
+.body div {
+    width: 35rem;
 }
-.rounded-circle {
-    border-radius: 50% !important;
+
+.form-check {
+    display: flex !important;
+    justify-content: center !important;
+    gap: 10px;
 }
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-.text-muted {
-    color: #aeb0b4 !important;
-}
-.text-muted {
-    font-weight: 300;
-}
-.form-control {
-    display: block;
+
+.hr {
     width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #4d5154;
-    background-color: #ffffff;
-    background-clip: padding-box;
-    border: 1px solid #eef0f3;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    background-color: black;
 }
