--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,5 +1,5 @@
 .bg-image {
-    background-image: url(/home/amal/src/ReactProject-main/public/bg.avif);
+    background-image: url(/public/bg.avif);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
