--- a/src/components/LoginPage.module.css
+++ b/src/components/LoginPage.module.css
@@ -1,11 +1,11 @@
-.bg-image {
+.bgimage {
     background-image: url(/public/bg.avif);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.container {
+.lgpgcontainer {
 
     position: absolute;
     top: 50%;
@@ -14,7 +14,7 @@
 
 }
 
-.h3 {
+.lgpgh3 {
     text-align: center;
     color: brown;
 
