--- a/src/components/TicTacToe.css
+++ b/src/components/TicTacToe.css
@@ -6,7 +6,7 @@ PX->> REM CALCULATION: 1 REM=16 PX
 PERCENTAGE TO REM: 1%=0.01REM 
 */
 
-* {
+.ticfullpage {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
