--- a/src/components/TicTacToe.css
+++ b/src/components/TicTacToe.css
@@ -107,7 +107,7 @@ PERCENTAGE TO REM: 1%=0.01REM
     background-color: rgb(138, 245, 156);
 }
 
-.occupied:hover {
+.ticoccupied:hover {
     background-color: rgb(252, 182, 182);
 }
 
