--- a/src/components/SnakeandLadder.module.css
+++ b/src/components/SnakeandLadder.module.css
@@ -22,7 +22,7 @@
   flex-direction: column;
 }
 
-.display-winner{
+.displaywinner{
   display: flex;
   align-items: flex-end;
   font-size: 3.125rem;
@@ -31,7 +31,7 @@
   flex: 1.15;
 }
 
-.restart-message{
+.restartmessage{
   display: flex;
   align-items: center;
   font-size: 1.25rem;
